Minor fix: Removes '//' that caused endless scrolling in Firefox/Mac from dashed line that indicates that the server log has more lines out of the visible area.

--- a/structr-base/src/main/resources/structr/css/dashboard.css
+++ b/structr-base/src/main/resources/structr/css/dashboard.css
@@ -135,7 +135,6 @@
 }
 
 .textarea-is-scrolled::after {
-	content: "//";
 	position: relative;
 	top: -5px;
 	background: white;
